<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gross.calculator.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/background_light"
        android:text="@string/zero"
        android:textSize="56sp"
        android:textColor="@android:color/black"
        android:gravity="bottom|right"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" />

    <Button
        android:text="@string/seven"
        android:layout_width="96dp"
        android:layout_height="92dp"
        android:textSize="30sp"
        android:id="@+id/btn_7"
        android:layout_below="@+id/textView"
        android:layout_alignParentTop="false"
        android:onClick="onClickNumber" />

    <Button
        android:text="@string/four"
        android:layout_width="96dp"
        android:layout_height="92dp"
        android:textSize="30sp"
        android:id="@+id/btn_4"
        android:layout_below="@+id/btn_plus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickNumber" />

    <Button
        android:text="@string/one"
        android:layout_width="96dp"
        android:layout_height="92dp"
        android:textSize="30sp"
        android:id="@+id/btn_1"
        android:layout_below="@+id/btn_4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickNumber" />

    <Button
        android:text="@string/backspace"
        android:layout_width="96dp"
        android:layout_height="92dp"
        android:textSize="30sp"
        android:id="@+id/btn_c"
        android:layout_below="@+id/btn_x"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickClear" />

    <Button
        android:text="@string/eight"
        android:layout_width="96dp"
        android:layout_height="92dp"
        android:textSize="30sp"
        android:id="@+id/btn_8"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/btn_7"
        android:layout_toEndOf="@+id/btn_7"
        android:onClick="onClickNumber" />

    <Button
        android:text="@string/nine"
        android:layout_width="96dp"
        android:layout_height="92dp"
        android:textSize="30sp"
        android:id="@+id/btn_9"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/btn_8"
        android:layout_toEndOf="@+id/btn_8"
        android:onClick="onClickNumber" />

    <Button
        android:text="@string/plus"
        android:layout_width="96dp"
        android:layout_height="92dp"
        android:textSize="30sp"
        android:id="@+id/btn_plus"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/btn_9"
        android:layout_toEndOf="@+id/btn_9"
        android:onClick="onClickOperator" />

    <Button
        android:text="@string/five"
        android:layout_width="96dp"
        android:layout_height="92dp"
        android:textSize="30sp"
        android:id="@+id/btn_5"
        android:layout_below="@+id/btn_8"
        android:layout_toRightOf="@+id/btn_7"
        android:layout_toEndOf="@+id/btn_7"
        android:onClick="onClickNumber" />

    <Button
        android:text="@string/six"
        android:layout_width="96dp"
        android:layout_height="92dp"
        android:textSize="30sp"
        android:id="@+id/btn_6"
        android:layout_below="@+id/btn_9"
        android:layout_toRightOf="@+id/btn_8"
        android:layout_toEndOf="@+id/btn_8"
        android:onClick="onClickNumber" />

    <Button
        android:text="@string/minus"
        android:layout_width="96dp"
        android:layout_height="92dp"
        android:textSize="30sp"
        android:id="@+id/btn_minus"
        android:layout_below="@+id/btn_plus"
        android:layout_toRightOf="@+id/btn_9"
        android:layout_toEndOf="@+id/btn_9"
        android:onClick="onClickOperator" />

    <Button
        android:text="@string/two"
        android:layout_width="96dp"
        android:layout_height="92dp"
        android:textSize="30sp"
        android:id="@+id/btn_2"
        android:layout_below="@+id/btn_5"
        android:layout_toRightOf="@+id/btn_4"
        android:layout_toEndOf="@+id/btn_4"
        android:onClick="onClickNumber" />

    <Button
        android:text="@string/three"
        android:layout_width="96dp"
        android:layout_height="92dp"
        android:textSize="30sp"
        android:id="@+id/btn_3"
        android:layout_below="@+id/btn_6"
        android:layout_toRightOf="@+id/btn_5"
        android:layout_toEndOf="@+id/btn_5"
        android:onClick="onClickNumber" />

    <Button
        android:text="@string/multiplication"
        android:layout_width="96dp"
        android:layout_height="92dp"
        android:textSize="30sp"
        android:id="@+id/btn_x"
        android:layout_below="@+id/btn_minus"
        android:layout_toRightOf="@+id/btn_6"
        android:layout_toEndOf="@+id/btn_6"
        android:onClick="onClickOperator" />

    <Button
        android:text="@string/zero"
        android:layout_width="96dp"
        android:layout_height="92dp"
        android:textSize="30sp"
        android:id="@+id/btn_0"
        android:layout_below="@+id/btn_2"
        android:layout_toRightOf="@+id/btn_1"
        android:layout_toEndOf="@+id/btn_1"
        android:onClick="onClickNumber" />

    <Button
        android:text="@string/equal"
        android:layout_width="96dp"
        android:layout_height="92dp"
        android:textSize="30sp"
        android:id="@+id/btn_equal"
        android:layout_below="@+id/btn_3"
        android:layout_toRightOf="@+id/btn_0"
        android:layout_toEndOf="@+id/btn_0"
        android:onClick="onClickEqual" />

    <Button
        android:text="@string/divide"
        android:layout_width="96dp"
        android:layout_height="92dp"
        android:textSize="30sp"
        android:id="@+id/btn_divide"
        android:layout_below="@+id/btn_x"
        android:layout_toRightOf="@+id/btn_equal"
        android:layout_toEndOf="@+id/btn_equal"
        android:onClick="onClickOperator" />
</RelativeLayout>
